--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "author": "Edgar Hipp",
   "license": "MIT",
   "dependencies": {
-    "bluerider": "^1.0.0",
-    "docxtemplater": "^3.5.2",
-    "jszip": "^2.6.1",
-    "minimist": "^1.2.0"
+    "angular-expressions": "^1.1.1",
+    "docxtemplater": "^3.19.7",
+    "minimist": "^1.2.5",
+    "pizzip": "^3.0.6"
   }
 }
