--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint . --fix && prettier --write *.js",
+    "preversion": "npm run lint && npm test",
+    "test": "./test.bash"
   },
   "bin": {
     "docxtemplater": "./cli.js"
@@ -13,14 +15,16 @@
   "author": "Edgar Hipp",
   "license": "MIT",
   "dependencies": {
-    "angular-expressions": "^1.1.1",
-    "docxtemplater": "^3.19.7",
-    "minimist": "^1.2.5",
-    "pizzip": "^3.0.6"
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/preset-env": "^7.20.2",
+    "angular-expressions": "^1.1.8",
+    "docxtemplater": "^3.34.0",
+    "minimist": "^1.2.7",
+    "pizzip": "^3.1.4"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.13.0",
-    "prettier": "^2.1.2"
+    "eslint": "^8.33.0",
+    "prettier": "^2.8.4"
   }
 }
